# informer

./: Cargo.toml  README.md  sample_config.toml
.github/workflows/: ci.yml
hooks/: pre-commit
src/: config.rs  lib.rs  main.rs  update.rs  utils.rs
test/: test.html  test.md
test/project/: config.toml  index.html  index.md  metadata.tsv  old_index.md
test/project/exports/taxonomy/: index.html
test/project/scripts/: new_script.html  new_script.md  test.html  test.md  test.py  test2.html  test2.md  test2.sh
