[package]
name = "informer"
version = "0.1.0"
authors = ["William Gasper <wkg@williamgasper.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mditty = { git = "https://github.com/wigasper/mditty" }
toml = "0.5"
serde = { version = "1.0.114", features = ["derive"] }
clap = "2.33.1"
